update url and route related changes

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
-<!-- Mirrored from newdesigns.sattvicitsolutions.com/saitalogistics.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 Feb 2023 12:17:02 GMT -->
 <head>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -39,7 +37,7 @@
     <div class="main-navigation main_menu " id="mainmenu-area">
         <div class="container">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="index-2.html">
+                <a class="navbar-brand" href="index.html">
                     <img src="assets/images/logo-white.png" alt="Digicon" class="img-fluid">
                 </a>
                 <!-- Toggler -->
@@ -111,7 +109,7 @@
 					        <div class="modal-content">
 					            <div class="modal-body">
 					                <div id="video-container" class="video-container">
-					                    <iframe id="youtubevideo" src="#" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+					                    <iframe id="youtubevideo" src="" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 					                </div>        
 					            </div>
 					            <div class="modal-footer">
@@ -281,7 +279,7 @@
 					<div class="col-lg-8">
 						<div class="cta-content text-center">
 							<h2 class="mt-3 mb-4">track your parcel</h2>
-							<form action="#">
+							<form action="">
 							  	<div class="form-group">
 							    	<input type="email" class="form-control" id="tracking-id" placeholder="Tracking ID">
 									<button type="submit" class="btn btn-main-2">Track</button>
@@ -327,7 +325,7 @@
 								<h3>Need To Make<br> An Enquiry</h3>
 							</div>
 							<div class="cta-content">
-								<form action="#">
+								<form action="">
 								  	<div class="form-group">
 								    	<input type="text" class="form-control" id="name" placeholder="Name">
 								  	</div>
@@ -449,7 +447,7 @@
 	                    	<a href="#"><img src="assets/images/social-icon/twitter.svg" alt="" class="img-responsive"></a>
 	                    </li>
 	                    <li class="list-inline-item">
-	                    	<a href="#"><img src="assets/images/social-icon/instagram.html" alt="" class="img-responsive"></a>
+	                    	<a href="#"><img src="assets/images/social-icon/instagram.svg" alt="" class="img-responsive"></a>
 	                    </li>
 	                    <li class="list-inline-item">
 	                    	<a href="#"><img src="assets/images/social-icon/globe.svg" alt="" class="img-responsive"></a>
@@ -507,7 +505,5 @@ $(document).on('hidden.bs.modal','#myModal', function () {
 
   </body>
   
-
-<!-- Mirrored from newdesigns.sattvicitsolutions.com/saitalogistics.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 Feb 2023 12:17:54 GMT -->
 </html>
    
