--- a/public_html/services.html
+++ b/public_html/services.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
-<!-- Mirrored from newdesigns.sattvicitsolutions.com/saitalogistics.com/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 Feb 2023 12:19:09 GMT -->
 <head>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -39,7 +37,7 @@
     <div class="main-navigation main_menu " id="mainmenu-area">
         <div class="container">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="index-2.html">
+                <a class="navbar-brand" href="index.html">
                     <img src="assets/images/logo-white.png" alt="Digicon" class="img-fluid">
                 </a>
                 <!-- Toggler -->
@@ -303,7 +301,7 @@
 	                    	<a href="#"><img src="assets/images/social-icon/twitter.svg" alt="" class="img-responsive"></a>
 	                    </li>
 	                    <li class="list-inline-item">
-	                    	<a href="#"><img src="assets/images/social-icon/instagram.html" alt="" class="img-responsive"></a>
+	                    	<a href="#"><img src="assets/images/social-icon/instagram.svg" alt="" class="img-responsive"></a>
 	                    </li>
 	                    <li class="list-inline-item">
 	                    	<a href="#"><img src="assets/images/social-icon/globe.svg" alt="" class="img-responsive"></a>
@@ -361,7 +359,5 @@ $(document).on('hidden.bs.modal','#myModal', function () {
 
   </body>
   
-
-<!-- Mirrored from newdesigns.sattvicitsolutions.com/saitalogistics.com/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 Feb 2023 12:19:40 GMT -->
 </html>
    
