--- a/public_html/about-us.html
+++ b/public_html/about-us.html
@@ -7,7 +7,7 @@
   <meta name="author" content="themeturn.com">
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
 
-  <title>Saita-Logistics</title>
+  <title>Saita-Logistics 123456</title>
 
   <!-- Mobile Specific Meta-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
